@@ -44,7 +44,8 @@ my $rh = {
     token_name              => $token_name,
     minimum_component_count => '2',
     run_dir                 => q[test_dir],
-    irods                   => $irods
+    irods                   => $irods,
+    reference_genome_path  => 'myref'
 };
 
 my $r = npg_seq_melt::merge::generator->new($rh);
@@ -102,7 +103,7 @@ $irods->remove_collection($irods_tmp_coll) if ($irods_zone =~ /-dev/ && $env_set
 
 my $commands = $r->_create_commands(library_digest_data());
 
-my $command_string1 = qq[$filename --rpt_list '11111:7:9;11112:8:9' --library_id 15756535 --library_type  'HiSeqX PCR free' --sample_id 2275905 --sample_name yemcha6089636 --sample_common_name 'Homo Sapien' --sample_accession_number EGAN00001386875 --study_id 4014 --study_name 'SEQCAP_WGS_GDAP_Chad' --study_title 'Genome Diversity in Africa Project: Chad' --study_accession_number EGAS00001001719 --aligned 1 --lims_id SQSCP --instrument_type HiSeqX --run_type paired158 --chemistry HXV2  --samtools_executable  samtools1   --run_dir  test_dir   --local --default_root_dir $IRODS_WRITE_PATH];
+my $command_string1 = qq[$filename --rpt_list '11111:7:9;11112:8:9' --reference_genome_path myref --library_id 15756535 --library_type  'HiSeqX PCR free' --sample_id 2275905 --sample_name yemcha6089636 --sample_common_name 'Homo Sapien' --sample_accession_number EGAN00001386875 --study_id 4014 --study_name 'SEQCAP_WGS_GDAP_Chad' --study_title 'Genome Diversity in Africa Project: Chad' --study_accession_number EGAS00001001719 --aligned 1 --lims_id SQSCP --instrument_type HiSeqX --run_type paired158 --chemistry HXV2  --samtools_executable  samtools1   --run_dir  test_dir   --local --default_root_dir $IRODS_WRITE_PATH];
 
 my $command_string2 = $command_string1;
    $command_string2 =~ s/11111:7:9;11112:8:9/19000:5:9;19264:6:9/;
